Tela de Criação de post finalizada e popover adicionado ao post

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,8 +51,8 @@
 
         <ion-menu-toggle>
           <ion-item routerLink="/viagens" routerLinkActive="active-item">
-            <ion-icon name="location-outline" slot="start"></ion-icon>
-            <ion-label>Viagens</ion-label>
+            <ion-icon name="bookmark-outline" slot="start"></ion-icon>
+            <ion-label>Viagens salvas</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
