--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -3,4 +3,10 @@
   <h4>Recomendados</h4>
   <app-post></app-post>
 
+  <ion-infinite-scroll>
+    <ion-infinite-scroll-content>
+
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
 </ion-content>
