--- a/src/app/tabs/tab3/tab3.page.html
+++ b/src/app/tabs/tab3/tab3.page.html
@@ -2,13 +2,32 @@
   <form>
     <ion-list lines="full">
       <ion-item>
-        <ion-input type="text" placeholder="Título da postagem"></ion-input>
-        <ion-icon name="create-outline"></ion-icon>
+        <ion-label position="floating">Título da postagem</ion-label>
+        <ion-input type="text"></ion-input>
+        <ion-icon name="create-outline" slot="end"></ion-icon>
       </ion-item>
       <ion-item>
-        <ion-input type="text" placeholder="Localização"></ion-input>
-        <ion-icon name="create-outline"></ion-icon>
+        <ion-label position="floating">Localização</ion-label>
+        <ion-input type="text" placeholder="Ex: São Paulo, Brasil / Restaurante"></ion-input>
+        <ion-icon name="create-outline" slot="end"></ion-icon>
+      </ion-item>
+      <ion-item id="contentItem">
+        <ion-label position="floating">Conteúdo</ion-label>
+        <ion-textarea type="text" maxlength="300" rows="8" auto-grow="true">
+        </ion-textarea>
+        <ion-icon name="create-outline" slot="end"></ion-icon>
       </ion-item>
     </ion-list>
+    <div class="divPosts">
+      <ion-chip>Post +</ion-chip>
+      <ion-buttons slot="end">
+        <ion-button>
+          <ion-icon name="location-outline"></ion-icon>
+        </ion-button>
+        <ion-button>
+          <ion-icon name="images-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </div>
   </form>
 </ion-content>
