--- a/src/app/tabs/tab5/tab5.page.html
+++ b/src/app/tabs/tab5/tab5.page.html
@@ -1,10 +1,18 @@
 <ion-content>
   <ion-list >
-    <ion-item *ngFor="let op of this.search.cacheSearch">
-      <ion-label>
-        {{op}}
-      </ion-label>
-      <ion-icon name="open-outline"></ion-icon>
-    </ion-item>
+    <ion-item-sliding side="end" (click)="Search(op)" *ngFor="let op of this.search.cacheSearch">
+      <ion-item-options>
+        <ion-item-option color="danger" (click)="excluir(op)">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+      <ion-item>
+        <ion-label>
+          {{op}}
+        </ion-label>
+        <ion-icon name="open-outline"></ion-icon>
+      </ion-item>
+    </ion-item-sliding>
+
   </ion-list>
 </ion-content>
