--- a/src/app/tabs/tab5/tab5.page.scss
+++ b/src/app/tabs/tab5/tab5.page.scss
@@ -3,3 +3,10 @@
     padding: 0;
     font-family: "Segoe UI";
 }
+#titulo{
+    ion-button{
+        --background:none;
+        --box-shadow:none;
+        align-items: flex-end;
+    }
+}
