Incremento de action-sheet nas tabs e alterações no popover do post

--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -1,18 +1,18 @@
 <ion-list lines="none">
   <!-- <ion-item button="true" (click)="btnSeguir()"> -->
-  <ion-item button="true">
-    <ion-icon name="person-add-outline"></ion-icon>
-    <ion-label>Seguir</ion-label>
+  <ion-item button="true" (click)="btnPerfil()">
+    <ion-icon name="person-outline"></ion-icon>
+    <ion-label>Acessar perfil</ion-label>
   </ion-item>
-  <ion-item button="true">
+  <ion-item button="true" (click)="btnSalvar()">
     <ion-icon name="bookmark-outline"></ion-icon>
     <ion-label>Salvar Post</ion-label>
   </ion-item>
-  <ion-item button="true">
+  <ion-item button="true" (click)="btnReport()">
     <ion-icon name="alert-circle-outline"></ion-icon>
     <ion-label>Reportar Post</ion-label>
   </ion-item>
-  <ion-item button="true">
+  <ion-item button="true" (click)="btnRemover()">
     <ion-icon name="sad-outline"></ion-icon>
     <ion-label>Sem interesse</ion-label>
   </ion-item>
