Tela de post-completo adicionada e outras mudanças estéticas em outras telas

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<ion-card class="post" button="true">
+<ion-card class="post" button="true" (click)="entrarPost()">
   <ion-card-content class="contentPost">
     <div class=divSuperior>
 
@@ -48,11 +48,6 @@
   </div>
 
     <div class="divRelevancia">
-
-      <div class="divStats">
-        <ion-icon name="heart-outline"></ion-icon>
-        <ion-label>28</ion-label>
-      </div>
 
       <div class="divStats">
         <ion-icon name="star-outline"></ion-icon>
