--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,13 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+.customAlert .alert-wrapper {
+  border-radius: 10px;
+  text-align: center;
+  font-family: 'Segoe UI';
+  height: 200px;
+}
+
 .customPopover .popover-content{
   --width: 200px;
 }
