--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -58,7 +58,7 @@
     </fieldset>
 
     <div id="divAcessos">
-      <ion-button class="redesSociais">
+      <ion-button class="redesSociais" (click)="LoginWithFb()">
         <ion-thumbnail>
           <ion-img src="/assets/facelogo.png"></ion-img>
         </ion-thumbnail>
@@ -70,7 +70,7 @@
         </ion-thumbnail>
       </ion-button>
 
-      <ion-button class="redesSociais">
+      <ion-button class="redesSociais" (click)="LoginWithGoogle()">
         <ion-thumbnail>
           <ion-img src="/assets/googlelogo.png"></ion-img>
         </ion-thumbnail>
