--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,6 +5,8 @@
 }
 
 ion-content{
+  width: 100%;
+  height: 100%;
   --ion-background-color: #00f9bb;
   --ion-background-color: -moz-linear-gradient(top,  #00f9bb 4%, #0afbc1 24%);
   --ion-background-color: -webkit-linear-gradient(top,  #00f9bb 4%,#0afbc1 24%);
@@ -12,22 +14,32 @@ ion-content{
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f9bb', endColorstr='#0afbc1',GradientType=0 );
 }
 
-#divLogoInicial{
+
+.conteiner{
   display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 60%;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  #divLogoInicial{
+    height: 80%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #logoInicial{
+    width: 34%;
+  }
+  #divBtn{
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    padding: 0px 17px 0px 17px;
+  }
+  
 }
 
-#logoInicial{
-  width: 34%;
-}
 
-#divBtn{
-  display: grid;
-  margin-top: 60%;
-  padding: 0px 17px 0px 17px;
-}
 
 #btnEntrar{
   min-height: 28px;
