--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -27,11 +27,11 @@
     </div>
 
     <ion-searchbar placeholder="Para onde viajar?" *ngIf='selectedTab == "tab5"' value="{{this.search.search}}" (ionChange)="filter($event)" (keypress)="onSearch($event)" animated=true></ion-searchbar>
-      <ion-buttons slot="end" *ngIf='selectedTab == "tab1" || selectedTab =="tab2" || selectedTab =="tab4" || selectedTab =="tab5"'>
-        <ion-button> 
-          <ion-icon slot="icon-only" name="ellipsis-horizontal"></ion-icon>
-        </ion-button>
-      </ion-buttons>
+    <ion-buttons slot="end" *ngIf='selectedTab != "tab3"'>
+      <ion-button>  
+        <ion-icon slot="icon-only" name="ellipsis-horizontal"></ion-icon>
+      </ion-button>
+    </ion-buttons>
 
   </ion-toolbar>
 </ion-header>
