Tela de post-completo quase finalizada e mudanças no menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu menuId="main-menu" content-id="main">
+  <ion-menu menuId="main-menu" content-id="main" swipeGesture="false">
     <ion-content>
 
       <div class="divHeader">
