--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="divHead">
         <div class="grid">
-          <div class="divContexto">
+          <div class="divTitulo">
             <p>Jesse Pinkman&nbsp;</p>
             <ion-label class="lugar">em&nbsp;França</ion-label>
             <ion-label class="lugar">,&nbsp;París</ion-label>
@@ -26,10 +26,11 @@
       </div>
 
     </div>
-
+    <div class="title">
+      <p>Viajei para São Paulo e foi incrível!!</p>
+    </div>
     <div class="divSinopse">
       <p>
-      Viajei para São Paulo e foi incrível!!
       Essa foi minha primeira viagem para a França, e foi incrível.
       O povo francês é muito acolhedor e a comida francesa
       é a melhor.
