--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -34,7 +34,7 @@
   display:grid;
 }
 
-.divContexto{
+.divTitulo{
   display: flex;
   align-items:baseline;
   justify-content: left;
@@ -57,6 +57,16 @@
 ion-buttons{
   ion-icon{
     font-size: 14px;
+  }
+}
+//=============================================================================================================//
+
+.title{
+  margin-top: 14px;
+
+  p{
+    font-size: 10px;
+    font-weight: bold;
   }
 }
 
