--- a/src/app/post-completo/post-completo.page.html
+++ b/src/app/post-completo/post-completo.page.html
@@ -11,47 +11,111 @@
 </ion-header>
 
 <ion-content>
-  <div class="content">
 
+  <div class=divSuperior>
 
+    <div class="divEsquerda">
+      <div class="divAvatar"><ion-avatar><img src="/assets/jesse.jpg"></ion-avatar></div>
+      <div class="divLine"></div>
+    </div>
 
-
-    <div class=divSuperior>
-
-      <div class="divAvatar">
-        <ion-avatar> <img src="/assets/jesse.jpg"> </ion-avatar>
-      </div>
-
-
-      <div class="divDesc">
-        <div class="divHead">
-          <div class="grid">
-            <div class="divContexto">
-              <p>Jesse Pinkman&nbsp;</p>
-            </div>
-            <div class="divTempo">
-              <p>X dias atrás</p>
-              <ion-label class="lugar">&nbsp;França</ion-label>
-              <ion-label class="lugar">,&nbsp;París</ion-label>
-            </div>
+    <div class="divDesc">
+      <div class="divHeadSuperior">
+        <div class="grid">
+          <div class="divTitulo">
+            <p>Jesse Pinkman&nbsp;</p>
           </div>
+          <div class="divTempo">
+            <p>X dias atrás</p>
+            <ion-label class="lugar">&nbsp;em&nbsp;França</ion-label>
+            <ion-label class="lugar">,&nbsp;París</ion-label>
+          </div>
+        </div>
 
-          <ion-buttons slot="end">
-            <ion-button>
-              <ion-icon name="ellipsis-horizontal"></ion-icon>
-            </ion-button>
-          </ion-buttons>
-        </div>
-        <div class="divSinopse">
-          <p>
-          Viajei para São Paulo e foi incrível!!
-          Essa foi minha primeira viagem para a França, e foi incrível.
-          O povo francês é muito acolhedor e a comida francesa
-          é a melhor.
-          </p>
-        </div>
+        <ion-buttons slot="end">
+          <ion-button>
+            <ion-icon name="ellipsis-horizontal"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </div>
+      <div class="title">
+        <p>Viajei para São Paulo e foi incrível!!</p>
+      </div>
+      <div class="divSinopse">
+        <p>
+        Essa foi minha primeira viagem para a França, e foi incrível.
+        O povo francês é muito acolhedor e a comida francesa
+        é a melhor.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="divPrincipal">
+    <div class="divEsquerda">
+      <ion-icon name="ellipse-outline"></ion-icon>
+      <div class="divLine"></div>
+    </div>
+
+    <div class="divDesc">
+      <div class="divHeadPrincipal">
+        <div class="divTitulo">
+            <p>Jesse Pinkman&nbsp;</p>
+            <p>X dias atrás</p>
+        </div>
+        <ion-buttons slot="end">
+          <ion-button>
+            <ion-icon name="ellipsis-horizontal"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </div>
+      <div class="divLocal">
+        <p>Sobre o Hotel&nbsp;</p>
+        <a>Hotel Vendaval</a>
+        <ion-icon name="location-outline"></ion-icon>
+      </div>
+      <div class="divSinopse">
+        <p>
+          O hotel é bem organizado, tem uma recepção muito bonita
+          e os atendentes são muito educados.
+        </p>
+      </div>
+      <div class="divImg1"></div>
 
     </div>
   </div>
+
+  <div class="divPrincipal">
+    <div class="divEsquerda">
+      <ion-icon name="ellipse-outline"></ion-icon>
+      <div class="divLine"></div>
+    </div>
+
+    <div class="divDesc">
+      <div class="divHeadPrincipal">
+        <div class="divTitulo">
+            <p>Jesse Pinkman&nbsp;</p>
+            <p>X dias atrás</p>
+        </div>
+        <ion-buttons slot="end">
+          <ion-button>
+            <ion-icon name="ellipsis-horizontal"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </div>
+      <div class="divLocal">
+        <p>Sobre o Hotel&nbsp;</p>
+        <a>Hotel Vendaval</a>
+        <ion-icon name="location-outline"></ion-icon>
+      </div>
+      <div class="divSinopse">
+        <p>
+          O hotel é bem organizado, tem uma recepção muito bonita
+          e os atendentes são muito educados.
+        </p>
+      </div>
+      <div class="divImg2"></div>
+    </div>
+  </div>
+
 </ion-content>
