Tela de post-completo quase finalizada e tela de outro-perfil criada e finalizada

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -7,13 +7,13 @@
       </div>
       <div class="divHead">
         <div class="grid">
-          <div class="divContexto">
+          <div class="divTitulo">
             <p>{{this.name}}&nbsp;</p>
-            <ion-label class="lugar">em&nbsp;{{this.city}}</ion-label>
-            <ion-label class="lugar">,&nbsp;{{this.country}}</ion-label>
           </div>
           <div class="divTempo">
             <p>{{this.time}}</p>
+            <p class="lugar">&nbsp;em&nbsp;{{this.city}},&nbsp;</p>
+            <p class="lugar">{{this.country}}</p>
           </div>
         </div>
 
