--- a/src/app/post-completo/post-completo.page.html
+++ b/src/app/post-completo/post-completo.page.html
@@ -27,8 +27,8 @@
           </div>
           <div class="divTempo">
             <p>X dias atrás</p>
-            <ion-label class="lugar">&nbsp;em&nbsp;França</ion-label>
-            <ion-label class="lugar">,&nbsp;París</ion-label>
+            <p class="lugar">&nbsp;em&nbsp;França</p>
+            <p class="lugar">,&nbsp;París</p>
           </div>
         </div>
 
@@ -117,5 +117,144 @@
       <div class="divImg2"></div>
     </div>
   </div>
+
+  <div class="divPrincipal">
+    <div class="divEsquerda">
+      <ion-icon name="ellipse-outline"></ion-icon>
+      <div class="divLine"></div>
+    </div>
+
+    <div class="divDesc">
+      <div class="divHeadPrincipal">
+        <div class="divTitulo">
+            <p>Jesse Pinkman&nbsp;</p>
+            <p>X dias atrás</p>
+        </div>
+        <ion-buttons slot="end">
+          <ion-button>
+            <ion-icon name="ellipsis-horizontal"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </div>
+      <div class="divLocal">
+        <p>Sobre o Hotel&nbsp;</p>
+        <a>Hotel Vendaval</a>
+        <ion-icon name="location-outline"></ion-icon>
+      </div>
+      <div class="divSinopse">
+        <p>
+          O hotel é bem organizado, tem uma recepção muito bonita
+          e os atendentes são muito educados.
+        </p>
+      </div>
+      <div class="divImg3">
+        <ion-buttons>
+          <ion-button>
+            <ion-icon src= "/assets/maps.svg"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </div>
+    </div>
+  </div>
+
+  <ion-buttons class="stats">
+    <ion-button>
+      <ion-icon name="star-outline" slot="icon-only"></ion-icon>
+    </ion-button>
+    <ion-button>
+      <ion-icon name="chatbubble-outline" slot="icon-only"></ion-icon>
+    </ion-button>
+    <ion-button>
+      <ion-icon name="bookmark-outline" slot="icon-only"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+
+  <h1>1240 Avaliações</h1>
+  <div class="divDesempenho">
+    <div class="avaliacoes">
+
+      <table>
+
+        <tr>
+          <td>
+            <div class="star">
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            </div>
+          </td>
+          <td>
+            <p>30</p>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="star">
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            </div>
+          </td>
+          <td>
+            <p>1200</p>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="star">
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            </div>
+          </td>
+          <td>
+            <p>5</p>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="star">
+            <ion-icon name="star-outline"></ion-icon>
+            <ion-icon name="star-outline"></ion-icon>
+            </div>
+          </td>
+          <td>
+            <p>3</p>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="star">
+            <ion-icon name="star-outline"></ion-icon>
+            </div>
+          </td>
+          <td>
+            <p>2</p>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="avaliacoes">
+      <h2>4,2</h2>
+    </div>
+  </div>
+
+  <h1>1240 Comentários</h1>
+
+
+
+
+
+
+
+
 
 </ion-content>
