--- a/src/app/post-completo/post-completo.page.html
+++ b/src/app/post-completo/post-completo.page.html
@@ -23,7 +23,7 @@
       <div class="divHeadSuperior">
         <div class="grid">
           <div class="divTitulo">
-            <p>Jesse Pinkman&nbsp;</p>
+            <p>Jesse Pinkman</p>
           </div>
           <div class="divTempo">
             <p>X dias atrás</p>
@@ -249,12 +249,14 @@
 
   <h1>1240 Comentários</h1>
 
-
-
-
-
-
-
+  <app-comentario></app-comentario>
+  <div class="resposta">
+    <app-comentario></app-comentario>
+  </div>
+  <app-comentario></app-comentario>
+  <div class="resposta">
+    <app-comentario></app-comentario>
+  </div>
 
 
 </ion-content>
