--- a/src/app/post-completo/post-completo.page.scss
+++ b/src/app/post-completo/post-completo.page.scss
@@ -226,7 +226,8 @@ ion-buttons{
 h1{
   font-size: 14px;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 .divDesempenho{
@@ -267,5 +268,8 @@ table{
   }
 }
 
+.resposta{
+  margin-left: 24px;
+}
 
 
