--- a/src/app/menu-items/configuracoes/configuracoes.page.html
+++ b/src/app/menu-items/configuracoes/configuracoes.page.html
@@ -1,12 +1,49 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>Configurações</ion-title>
+    <ion-title>travel<img src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+<ion-content >
+  
+  <div id="divPrincipal">
+    <h3>Configurações</h3>
+    <ion-list>
+      <ion-item-group>
+        <ion-item>
+          <ion-label>Login e Segurança</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>User Name: <br>{{this.userInfo.userName}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Email: <br>{{this.userInfo.email}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Telefone: <br>{{this.userInfo.phone}}</ion-label>
+        </ion-item>
+      </ion-item-group>
+     
+      <ion-item-group>
+        <ion-item>
+          <ion-label>Permissões de Dados</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Localidade <br> {{this.userInfo.place}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Seus dados no travel</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Desativar a Conta</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label color="danger">Sair</ion-label>
+        </ion-item>
+      </ion-item-group>
+    </ion-list>
 
-<ion-content>
-
+  </div>
 </ion-content>
