--- a/src/app/tabs/tab3/tab3.page.scss
+++ b/src/app/tabs/tab3/tab3.page.scss
@@ -22,6 +22,20 @@ ion-item{
     font-size: 20px;
     margin-top: 24px;
   }
+  .options{
+    display: flex;
+    width: 100%;
+    height: 30px;
+    border-bottom: 1px solid var(--ion-color-dark);
+    margin-top: 5px;
+    align-items: center;
+    p{
+      width: 90%;
+    }
+    ion-icon{
+      margin:0;
+    }
+  }
 }
 
 #contentItem{
