--- a/src/app/post-completo/post-completo.page.html
+++ b/src/app/post-completo/post-completo.page.html
@@ -158,7 +158,7 @@
   </div>
 
   <ion-buttons class="stats">
-    <ion-button>
+    <ion-button (click)="openPopover($event)">
       <ion-icon name="star-outline" slot="icon-only"></ion-icon>
     </ion-button>
     <ion-button>
