--- a/src/app/post-completo/post-completo.page.html
+++ b/src/app/post-completo/post-completo.page.html
@@ -33,7 +33,7 @@
         </div>
 
         <ion-buttons slot="end">
-          <ion-button>
+          <ion-button (click)="openPopover($event)">
             <ion-icon name="ellipsis-horizontal"></ion-icon>
           </ion-button>
         </ion-buttons>
@@ -64,7 +64,7 @@
             <p>X dias atrás</p>
         </div>
         <ion-buttons slot="end">
-          <ion-button>
+          <ion-button (click)="openPopover($event)">
             <ion-icon name="ellipsis-horizontal"></ion-icon>
           </ion-button>
         </ion-buttons>
@@ -98,7 +98,7 @@
             <p>X dias atrás</p>
         </div>
         <ion-buttons slot="end">
-          <ion-button>
+          <ion-button (click)="openPopover($event)">
             <ion-icon name="ellipsis-horizontal"></ion-icon>
           </ion-button>
         </ion-buttons>
@@ -131,7 +131,7 @@
             <p>X dias atrás</p>
         </div>
         <ion-buttons slot="end">
-          <ion-button>
+          <ion-button (click)="openPopover($event)">
             <ion-icon name="ellipsis-horizontal"></ion-icon>
           </ion-button>
         </ion-buttons>
@@ -158,7 +158,7 @@
   </div>
 
   <ion-buttons class="stats">
-    <ion-button (click)="openPopover($event)">
+    <ion-button (click)="openStars($event)">
       <ion-icon name="star-outline" slot="icon-only"></ion-icon>
     </ion-button>
     <ion-button>
