--- a/src/app/components/estrelas/estrelas.component.html
+++ b/src/app/components/estrelas/estrelas.component.html
@@ -1,19 +1,19 @@
 <ion-grid>
   <ion-row>
     <ion-col>
-      <ion-icon [name]="star1" (click)="btnStar1()"></ion-icon>
+      <ion-icon [name]="stars>=1?'star':'star-outline'" (click)="star(1)" ></ion-icon>
     </ion-col>
     <ion-col>
-      <ion-icon [name]="star2" (click)="btnStar2()"></ion-icon>
+      <ion-icon [name]="stars>=2?'star':'star-outline'" (click)="star(2)"></ion-icon>
     </ion-col>
     <ion-col>
-      <ion-icon [name]="star3" (click)="btnStar3()"></ion-icon>
+      <ion-icon [name]="stars>=3?'star':'star-outline'" (click)="star(3)"></ion-icon>
     </ion-col>
     <ion-col>
-      <ion-icon [name]="star4" (click)="btnStar4()"></ion-icon>
+      <ion-icon [name]="stars>=4?'star':'star-outline'" (click)="star(4)"></ion-icon>
     </ion-col>
     <ion-col>
-      <ion-icon [name]="star5" (click)="btnStar5()"></ion-icon>
+      <ion-icon [name]="stars>=5?'star':'star-outline'" (click)="star(5)"></ion-icon>
     </ion-col>
   </ion-row>
 </ion-grid>
