--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,7 +5,7 @@
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
 
-    <ion-title class="mainTitle" *ngIf='selectedTab == "tab1" || selectedTab =="tab2"'>Travel<ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon></ion-title>
+    <ion-title class="mainTitle" *ngIf='selectedTab == "tab1" || selectedTab =="tab2"'>travel<ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon></ion-title>
 
     <ion-title *ngIf='selectedTab == "tab3"' id="postTitle">
       Criar post
