--- a/src/app/tabs/tab3/tab3.page.html
+++ b/src/app/tabs/tab3/tab3.page.html
@@ -21,8 +21,17 @@
       <ion-item id="contentItem">
         <ion-label position="floating">Conteúdo</ion-label>
         <ion-textarea type="text" maxlength="300" rows="8" auto-grow="true">
+          
         </ion-textarea>
         <ion-icon name="create-outline" slot="end"></ion-icon>
+      </ion-item>
+      <ion-item *ngIf="photo.length>0">
+        <div class="postImg" *ngFor="let img of photo">
+         <div>
+            <img [src]="img.data"/>
+         </div>
+        </div>
+        
       </ion-item>
     </ion-list>
     <div class="divPosts">
@@ -31,7 +40,7 @@
         <ion-button>
           <ion-icon name="location-outline"></ion-icon>
         </ion-button>
-        <ion-button>
+        <ion-button (click)="galery($event)">
           <ion-icon name="images-outline"></ion-icon>
         </ion-button>
       </ion-buttons>
