--- a/src/app/tabs/tab3/tab3.page.scss
+++ b/src/app/tabs/tab3/tab3.page.scss
@@ -36,10 +36,22 @@ ion-item{
       margin:0;
     }
   }
+  
 }
-
+.postImg{
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
+  display: flex;
+  align-content: center;
+  div{
+    width: 100%;
+    height: 100%;  
+  }
+}
 #contentItem{
   --padding-top: 2px;
+  
 }
 
 .divPosts{
