--- a/src/app/tabs/tab3/tab3.page.scss
+++ b/src/app/tabs/tab3/tab3.page.scss
@@ -39,14 +39,11 @@ ion-item{
   
 }
 .postImg{
-  width: 200px;
-  height: 200px;
   border-radius: 10px;
-  display: flex;
   align-content: center;
-  div{
+  img{
     width: 100%;
-    height: 100%;  
+    height: 100%;
   }
 }
 #contentItem{
